--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "private": true,
   "dependencies": {
     "gatsby": "^2.3.25",
+    "gatsby-plugin-google-tagmanager": "^2.0.13",
+    "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-typescript": "^2.0.12",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "build": "gatsby build",
@@ -24,6 +27,7 @@
     "@types/node": "^11.13.6",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
     "prettier": "^1.17.0",
     "typescript": "^3.4.4"
   }
