--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.3.25",
     "gatsby-plugin-google-tagmanager": "^2.0.13",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-typescript": "^2.0.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
