--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
+    "lint:source": "tslint './src/**/*.{ts,tsx}'",
     "serve": "gatsby serve",
     "type-check": "tsc --noEmit"
   },
@@ -30,6 +31,8 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "prettier": "^1.17.0",
+    "tslint": "^5.16.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.4"
   }
 }
