--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
+    "format:markdown": "prettier --write '{./content/**/*.md,./README.md}'",
+    "format:source": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint:source": "tslint './src/**/*.{ts,tsx}'",
     "serve": "gatsby serve",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
     "@types/node": "^11.13.6",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
