--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "scripts": {
     "build": "gatsby build",
+    "ci-check": "yarn run:parallel lint:* nit:*",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "format:markdown": "prettier --write '{./content/**/*.md,./README.md}'",
     "format:source": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint:source": "tslint './src/**/*.{ts,tsx}'",
+    "nit:markdown": "prettier --list-different '{./content/**/*.md,./README.md}'",
+    "nit:source": "prettier --list-different 'src/**/*.{ts,tsx}'",
+    "run:parallel": "npm-run-all --parallel",
     "serve": "gatsby serve",
     "type-check": "tsc --noEmit"
   },
@@ -35,6 +39,7 @@
     "@types/react-helmet": "^5.0.8",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
