--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "gatsby": "^2.5.5",
+    "gatsby-plugin-canonical-urls": "^2.0.13",
     "gatsby-plugin-google-tagmanager": "^2.0.13",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.4.0",
@@ -21,6 +22,7 @@
     "build": "gatsby build",
     "ci-check": "yarn run:parallel lint:* nit:*",
     "clean": "gatsby clean",
+    "deploy": "gatsby-plugin-s3 deploy",
     "develop": "gatsby develop",
     "format:markdown": "prettier --write '{./content/**/*.md,./README.md}'",
     "format:source": "prettier --write 'src/**/*.{ts,tsx}'",
@@ -39,6 +41,7 @@
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
+    "gatsby-plugin-s3": "^0.2.5",
     "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
     "npm-run-all": "^4.1.5",
