fix: prettier script runner

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "clean": "gatsby clean",
     "deploy": "gatsby-plugin-s3 deploy",
     "develop": "gatsby develop",
-    "format:markdown": "prettier --write '{./content/**/*.md,./README.md}'",
+    "format:markdown": "prettier --write '{content/**/*.md,README.md}'",
     "format:source": "prettier --write 'src/**/*.{ts,tsx}'",
-    "lint:source": "tslint './src/**/*.{ts,tsx}'",
-    "nit:markdown": "prettier --list-different '{./content/**/*.md,./README.md}'",
+    "lint:source": "tslint 'src/**/*.{ts,tsx}'",
+    "nit:markdown": "prettier --list-different '{content/**/*.md,README.md}'",
     "nit:source": "prettier --list-different 'src/**/*.{ts,tsx}'",
     "run:parallel": "npm-run-all --parallel",
     "serve": "gatsby serve",
