--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "gatsby": "^5.14.6",
     "gatsby-plugin-canonical-urls": "^5.14.0",
     "gatsby-plugin-google-tagmanager": "^5.14.0",
-    "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-plugin-typescript": "^5.14.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "scripts": {
     "build": "gatsby build",
